# Karteikartensystem

./: CMakeLists.txt  README.md  data.json
lib/googletest/: README.md
lib/googletest/docs/: advanced.md  faq.md  gmock_cook_book.md  gmock_faq.md  primer.md
lib/googletest/docs/reference/: testing.md
lib/googletest/googlemock/: CMakeLists.txt
lib/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-spec-builders.h
lib/googletest/googlemock/src/: gmock-matchers.cc
lib/googletest/googletest/cmake/: internal_utils.cmake
lib/googletest/googletest/include/gtest/: gtest-death-test.h  gtest-printers.h  gtest.h
lib/googletest/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h
lib/googletest/googletest/src/: gtest-death-test.cc  gtest-port.cc  gtest-printers.cc  gtest.cc
lib/googletest/googletest/test/: BUILD.bazel
src/: CMakeLists.txt  abfrage.c  abfrage.h  add_node.c  add_node.h  add_node_back.c  add_node_back.h  add_node_front.c  add_node_front.h  asciart.c  asciart.h  dev_menu.c  dev_menu.h  devmenu.c  devmenu.h  edit_node.c  edit_node.h  file_handling.c  file_handling.h  hangman.c  hangman.h  insert_node.c  insert_node.h  main.c  node.h  print_list.c  print_list.h  remove_node.c  remove_node.h  search_node.c  search_node.h  sort_node.c  sort_node.h  swap_node.c  swap_node.h
test/: CMakeLists.txt  abfrage_test.cpp  add_node_front_test.cpp  add_node_test.cpp  gtest.cpp  remove_node_test.cpp  sort_node_test.cpp  swap_node_test.cpp
